EDIT: clear sidemenu

--- a/main_page.html
+++ b/main_page.html
@@ -27,18 +27,36 @@
             </form>
         </div>
     </nav>
-    <div class="sidebar">
+    <div class="sidebar_mini">
         <button type="button">
             <img src="./icon/house-solid-full.svg" alt="홈">
-            홈
+            <p>홈</p>
         </button>
         <button type="button">
             <img src="./icon/icons8-youtube-반바지-48.png" alt="쇼츠">
-            Shorts
+            <p>Shorts</p>
         </button>
         <button type="button">
             <img src="./icon/youtube-brands-solid-full.svg" alt="구독">
-            구독
+            <p>구독</p>
+        </button>
+        <button type="button">
+            <img src="./icon/user-regular-full.svg" alt="내 페이지">
+            <p>내 페이지</p>
+        </button>
+    </div>
+    <div class="sidebar">
+        <button type="button">
+            <img src="./icon/house-solid-full.svg" alt="홈">
+            <span>홈</span>
+        </button>
+        <button type="button">
+            <img src="./icon/icons8-youtube-반바지-48.png" alt="쇼츠">
+            <span>Shorts</span>
+        </button>
+        <button type="button">
+            <img src="./icon/youtube-brands-solid-full.svg" alt="구독">
+            <span>구독</span>
         </button>
         <hr>
         <button type="button" class="category">
