EDIT: edit search bar

--- a/main_page.html
+++ b/main_page.html
@@ -20,11 +20,20 @@
         </div>
         <div class="search_bar">
             <form class="search" id="search" action="" method="get">
-                <input type="text" name="" value="" placeholder="검색">
+                <input type="search" name="" value="" placeholder="검색">
                 <button type="submit">
                     <img src="./icon/magnifying-glass-solid-full.svg" alt="검색">
                 </button>
             </form>
+        </div>
+        <div class="make_video">
+
+        </div>
+        <div class="alert">
+
+        </div>
+        <div class="user_ingfo">
+
         </div>
     </nav>
     <div class="sidebar_mini">
@@ -83,9 +92,6 @@
             <span>좋아요 표시한 동영상</span>
         </button>
         <hr>
-
-
     </div>
-
 </body>
 </html>
