EDIT: complete navigation bar

--- a/main_page.html
+++ b/main_page.html
@@ -25,15 +25,21 @@
                     <img src="./icon/magnifying-glass-solid-full.svg" alt="검색">
                 </button>
             </form>
+            <button type="button" class="search_by_sound">
+                <img src="./icon/microphone-solid-full.svg" alt="음성 검색">
+            </button>
         </div>
-        <div class="make_video">
-
-        </div>
-        <div class="alert">
-
-        </div>
-        <div class="user_ingfo">
-
+        <div class="func_btn">
+            <button type="button" class="upload_video">
+                <img src="./icon/plus.png" alt="영상 업로드">
+                <span>만들기</span>
+            </button>
+            <button type="button" class="alert_btn">
+                <img src="./icon/bell-regular-full.svg" alt="알림">
+            </button>
+            <button type="button" class="user_info">
+                <img src="./icon/user-regular-full.svg" alt="사용자 정보">
+            </button>
         </div>
     </nav>
     <div class="sidebar_mini">
