EDIT: edit responsive web design

--- a/main_page.html
+++ b/main_page.html
@@ -60,6 +60,7 @@
             <p>내 페이지</p>
         </button>
     </div>
+    <div class="backdrop"></div>
     <div class="sidebar">
         <button type="button">
             <img src="./icon/house-solid-full.svg" alt="홈">
@@ -97,7 +98,27 @@
             <img src="./icon/thumbs-up-regular-full.svg" alt="좋아요">
             <span>좋아요 표시한 동영상</span>
         </button>
+        <button type="button">
+            <img src="./icon/download-solid-full.svg" alt="다운로드">
+            <span>오프라인 저장 동영상</span>
+        </button>
         <hr>
+        <p>구독</p>
+        <button type="button">
+            <img src="./icon/user-regular-full.svg" alt="구독1">
+            <span>구독 채널</span>
+            <img src="./icon/tower-broadcast-solid-full.svg" alt="방송 중" class="broadcasting">
+        </button>
+        <button type="button">
+            <img src="./icon/user-regular-full.svg" alt="구독1">
+            <span>구독 채널</span>
+            <img src="./icon/tower-broadcast-solid-full.svg" alt="방송 중" class="broadcasting">
+        </button>
+        <button type="button">
+            <img src="./icon/user-regular-full.svg" alt="구독1">
+            <span>구독 채널</span>
+            <img src="./icon/tower-broadcast-solid-full.svg" alt="방송 중" class="broadcasting">
+        </button>
     </div>
 </body>
 </html>
