ADD: user infomation & option list

--- a/main_page.html
+++ b/main_page.html
@@ -37,11 +37,55 @@
             <button type="button" class="alert_btn">
                 <img src="./icon/bell-regular-full.svg" alt="알림">
             </button>
-            <button type="button" class="user_info">
+            <button type="button" class="user_info" id="user_info">
                 <img src="./icon/user-regular-full.svg" alt="사용자 정보">
             </button>
         </div>
     </nav>
+    <div class="user_backdrop"></div>
+    <div class="user_option" id="user_option">
+        <div class="information">
+            <img src="userpage.png" alt="프로필사진">
+            <div class="info_text">
+                <span class="user_name">박주영</span>
+                <span class="user_id">@JYP</span>
+                <a href="#" class="link_to_channel">내 채널 보기</a>
+            </div>
+
+        </div>
+        <hr>
+        <div class="option_list">
+            <ul>
+                <li>Google 계정</li>
+                <li>계정 전환</li>
+                <li>로그아웃</li>
+            </ul>
+            <hr>
+            <ul>
+                <li>YouTube 스트디오</li>
+                <li>구매 항목 및 멤버십</li>
+            </ul>
+            <hr>
+            <ul>
+                <li>YouTube의 내 데이터</li>
+                <li>디자인: 기기테마</li>
+                <li>언어: 한국어</li>
+                <li>제한모드: 사용 안함</li>
+                <li>위치: 한국</li>
+                <li>단축키</li>
+            </ul>
+            <hr>
+            <ul>
+                <li>설정</li>
+            </ul>
+            <hr>
+            <ul>
+                <li>고객센터</li>
+                <li>의견 보내기</li>
+            </ul>
+        </div>
+    </div>
+
     <div class="sidebar_mini">
         <button type="button">
             <img src="./icon/house-solid-full.svg" alt="홈">
@@ -60,7 +104,7 @@
             <p>내 페이지</p>
         </button>
     </div>
-    <div class="backdrop"></div>
+    <div class="side_backdrop"></div>
     <div class="sidebar">
         <button type="button">
             <img src="./icon/house-solid-full.svg" alt="홈">
