ADD: video contents

--- a/main_page.html
+++ b/main_page.html
@@ -164,5 +164,95 @@
             <img src="./icon/tower-broadcast-solid-full.svg" alt="방송 중" class="broadcasting">
         </button>
     </div>
+    <div class="video_list">
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_1.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_2.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_3.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_4.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_5.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_6.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_7.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+        <div class="video_thumbnail">
+            <img src="./thumbnail/thumbnail_8.png" class="thumbnail_image" alt="썸네일">
+            <div class="video_info">
+                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                <div class="video_text">
+                    <h3 class="video_title">영상 제목</h3>
+                    <p class="channel_name">채널 이름</p>
+                    <p class="other_info">조회수 / 업로드 시간</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
