ADD: link function

--- a/main_page.html
+++ b/main_page.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./stylesheet.css">
+    <script>
+        const params = new URLSearchParams(location.search);
+            if(!params.has('videoId')) {
+                const newUrl = location.pathname + '?videoId=main';
+                location.replace(newUrl);
+            }
+    </script>
     <script defer src="function.js"></script>
 </head>
 <body>
@@ -14,7 +21,7 @@
             </a>
         </div>
         <div class="logo">
-            <a href="http://localhost:63342/estsoft_first_project/main_page.html?_ijt=1iq8tmqn7uuledo95remv76kgi&_ij_reload=RELOAD_ON_SAVE" target="_self">
+            <a href="main_page.html?videoId=main" target="_self">
                 <img src="youtube_logo_1.PNG" alt="유튜브">
             </a>
         </div>
@@ -87,7 +94,7 @@
     </div>
 
     <div class="sidebar_mini">
-        <button type="button">
+        <button type="button" onclick="location.href='./main_page.html?videoId=main'">
             <img src="./icon/house-solid-full.svg" alt="홈">
             <p>홈</p>
         </button>
@@ -95,7 +102,7 @@
             <img src="./icon/icons8-youtube-반바지-48.png" alt="쇼츠">
             <p>Shorts</p>
         </button>
-        <button type="button">
+        <button type="button" onclick="location.href='./main_page.html?videoId=subscribe'">
             <img src="./icon/youtube-brands-solid-full.svg" alt="구독">
             <p>구독</p>
         </button>
@@ -106,7 +113,7 @@
     </div>
     <div class="side_backdrop"></div>
     <div class="sidebar">
-        <button type="button">
+        <button type="button" onclick="location.href='./main_page.html?videoId=main'">
             <img src="./icon/house-solid-full.svg" alt="홈">
             <span>홈</span>
         </button>
@@ -114,7 +121,7 @@
             <img src="./icon/icons8-youtube-반바지-48.png" alt="쇼츠">
             <span>Shorts</span>
         </button>
-        <button type="button">
+        <button type="button" onclick="location.href='./main_page.html?videoId=subscribe'">
             <img src="./icon/youtube-brands-solid-full.svg" alt="구독">
             <span>구독</span>
         </button>
@@ -165,93 +172,110 @@
         </button>
     </div>
     <div class="video_list">
+
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_1.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_1.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_2.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_2.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_3.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_3.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_4.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_4.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_5.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_5.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_6.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_6.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_7.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_7.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="video_thumbnail">
-            <img src="./thumbnail/thumbnail_8.png" class="thumbnail_image" alt="썸네일">
-            <div class="video_info">
-                <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
-                <div class="video_text">
-                    <h3 class="video_title">영상 제목</h3>
-                    <p class="channel_name">채널 이름</p>
-                    <p class="other_info">조회수 / 업로드 시간</p>
+            <a href="video_page.html?videoId=1">
+                <img src="./thumbnail/thumbnail_8.png" class="thumbnail_image" alt="썸네일">
+                <div class="video_info">
+                    <img src="./icon/user-regular-full.svg" class="channel_icon" alt="채널 아이콘">
+                    <div class="video_text">
+                        <h3 class="video_title">영상 제목</h3>
+                        <p class="channel_name">채널 이름</p>
+                        <p class="other_info">조회수 / 업로드 시간</p>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 </body>
