EDIT: change iframe tag

--- a/video_page.html
+++ b/video_page.html
@@ -158,7 +158,7 @@
     <div class="container">
         <main class="main_contents">
             <div class="main_video">
-                <img src="./thumbnail/thumbnail_1.png" alt="동영상">
+                <iframe src="https://www.youtube.com/embed/vrEjAjj_lzA?si=GS3ZHPMhvx9StUta" title="판타스틱듀오 이소라 제발"></iframe>
                 <h3 class="main_video_title">메인 영상 제목</h3>
                 <div class="main_video_info_wrap">
                     <div class="main_video_info">
